[package]
name = "swarms-runtime" # The name of your project
version = "0.1.0" # The current version, adhering to semantic versioning
edition = "2021" # Specifies which edition of Rust you're using, e.g., 2018 or 2021
authors = ["Your Name <your.email@example.com>"] # Optional: specify the package authors
license = "MIT" # Optional: the license for your project
description = "A brief description of my project" # Optional: a short description of your project

[dependencies]
cpython = "0.5"
rayon = "1.5"

[dependencies.pyo3]
version = "0.20.3"
features = ["extension-module", "auto-initialize"]
