[package]
name = "redis"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"

bytes = "1"